--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,21 @@
 {
-  "name": "sfadles/number-to-string-converter",
+  "name": "sfadless/number-to-string-converter",
   "description": "Converts numbers to text",
   "require": {
-    "php": "^5.4 || ^7.0"
+    "php": "^5.6 || ^7.0",
+    "ext-mbstring": "*"
   },
   "autoload": {
     "psr-4": {
-      "Sfadless\\Utils\\": "src"
+      "Sfadless\\NumberToStringConverter\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Sfadless\\NumberToStringConverter\\Tests\\": "tests"
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.3"
+    "phpunit/phpunit": "^7"
   }
 }
