--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "license": "proprietary",
   "description": "Converts numbers to text",
   "require": {
-    "php": "^5.6 || ^7.0",
+    "php": "^5.6 || ^7.0 || ^8.0",
     "ext-mbstring": "*"
   },
   "autoload": {
